--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@
 %\subtitle{Subtitle Text, if any}
 
 \authorinfo{Marco Vassena}
-           {Chalmers University}
+           {Chalmers University, Sweden}
            {vassena@chalmers.se}
 % \authorinfo{Name2\and Name3}
 %            {Affiliation2/3}
