--- a/main.tex
+++ b/main.tex
@@ -86,7 +86,7 @@
 \graphicspath{ {images/} }
 
 \begin{document}
-
+\toappear{}
 \special{papersize=8.5in,11in}
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
@@ -2331,8 +2331,9 @@ world data as future work.
 
 % This is the text of the appendix, if you need one.
 
-% \acks
-
+\acks{ This work was supported in part by SIGPLAN PAC funding.  We
+  thank Wouter Swierstra and Alejandro Russo for comments that greatly
+  improved the paper and the reviewers for their valuable feedback.  }
 % Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
