--- a/main.tex
+++ b/main.tex
@@ -2331,7 +2331,7 @@ world data as future work.
 
 % This is the text of the appendix, if you need one.
 
-\acks{ This work was supported in part by SIGPLAN PAC funding.  We
+\acks{ This work was supported in part by SIGPLAN PAC funding.  I
   thank Wouter Swierstra and Alejandro Russo for comments that greatly
   improved the paper and the reviewers for their valuable feedback.  }
 % Acknowledgments, if needed.
