--- a/main.tex
+++ b/main.tex
@@ -155,22 +155,23 @@
   the merging algorithm raises a conflict and established a structural
   invariant preserved.
   %\todo{Improve conclusion?}
-  %
+ %
   % We have implemented our algorithm in Haskell in order to make our results
   % practical and employed advanced type-system features to retain a 
   % fair amount of type safety.
   %\todo{Abstract Conclusion?}
 \end{abstract}
 
-\category{CR-number}{subcategory}{third-level}
+\category{D.1.1}{Programming Techniques}{Applicative (Functional) Programming.}
+%{CR-number}{subcategory}{third-level}
 
 % general terms are not compulsory anymore, 
 % you may leave them out
 \terms
-Algorithms,
+Algorithms.
 
 \keywords
-Diff3, Dependent types, Datatype-generic programming
+Diff3, Dependent types, Datatype-generic programming.
 
 \section{Introduction}
 \label{sec:intro}
@@ -733,7 +734,7 @@ analogous and thus omitted:
 
 \begin{figure*}[!t]
 \centering
-\includegraphics[scale=.27]{embedding2}
+\includegraphics[scale=.25]{embedding2}
 \caption{The embedding induced by \texttt{[Upd (::) (::), \textcolor{magenta}{Upd 0 1}, \textcolor{blue}{Ins (::)} , \textcolor{blue}{Ins 2}, Upd [] []]}}
 \label{fig:embedding}
 \end{figure*}
