--- a/main.tex
+++ b/main.tex
@@ -85,6 +85,8 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
+\usepackage{flushend}
+
 \begin{document}
 \toappear{}
 \special{papersize=8.5in,11in}
@@ -168,7 +170,7 @@
 % general terms are not compulsory anymore, 
 % you may leave them out
 \terms
-Algorithms.
+Algorithms.\
 
 \keywords
 Diff3, Dependent types, Datatype-generic programming.
