Added font commands at the beginning

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,12 @@
 
 \usepackage{hyperref}
 
+
+% \DeclareTextCommand{\nobreakspace}{T1}{\leavevmode\nobreak\ }
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{microtype}
+
 \usepackage{minted} % Code listing with reasonable good highlighting
 \usepackage{bussproofs}   % For typing judgments
 \usepackage[no-math]{fontspec}
